@@ -9,6 +9,11 @@ libdebian-installer (0.27) unstable; urgency=low
   * Joshua Kwan
     - quote an argument in configure.ac to fix test complaining about no
       LHS for extensive-debug
+  * Joey Hess
+    - fix devfs.c test mode (to really work)
+    - fix /dev/ida support off by one
+    - fix /dev/ataraid support, leave off the cN part of device name
+    - don't map character devices to block device namesb
 
  -- Bastian Blank <waldi@debian.org>  Mon, 14 Jun 2004 14:23:10 +0200
 
